{
  "@@locale": "hi",
  "appTitle": "SafeOne",
  "settingsTitle": "सेटिंग्स",
  "language": "भाषा",
  "languageSubtitle": "अपनी पसंदीदा भाषा चुनें",
  "fakeCallTitle": "नकली कॉल",
  "fakeCallHeader": "असुरक्षित स्थिति से निकलने में मदद के लिए एक नकली इनकमिंग कॉल बनाएं। यह कॉल असली जैसी दिखती है और आपको वहां से हटने का बहाना देती है।",
  "chooseScenario": "परिदृश्य चुनें",
  "chooseCaller": "कॉल करने वाला चुनें",
  "phoneNumberOptional": "फ़ोन नंबर (वैकल्पिक)",
...
